<resources>
    <string name="app_name">ExaminationAssignment</string>
    <string name="login_hint">Введите почту</string>
    <string name="passwotd_hint">Введите пароль</string>
    <string name="btn_enter_text">Войти</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="product_name">Название товара</string>
    <string name="price">Цена</string>
    <string name="you_did_it">Вы успешно купили товар:</string>
    <string name="in_stock">В наличии</string>
    <string name="stat">Статус</string>
    <string name="ok">OK</string>
</resources>