<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tool_constraint"
        android:paddingBottom="22dp"
        android:paddingTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_color">

        <Button
            android:id="@+id/btn_goBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"/>

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tvGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="Назад"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/btn_goBack"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_constraint">

        <TextView
            android:id="@+id/product_name"
            style="@style/item_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:text="@string/product_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="29dp"
            android:fontFamily="@font/abel"
            android:hint="SomeText"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/product_name" />

        <TextView
            android:id="@+id/product_price"
            style="@style/item_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="15dp"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="29dp"
            android:hint="5000"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/description_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/header_constraint">

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Описание"
            style="@style/item_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="13dp"/>
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            app:layout_constraintStart_toStartOf="@id/description_text"
            android:fontFamily="@font/abel"
            android:textColor="@android:color/black"
            android:text="SomeText"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/botton_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/btnBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="47dp"
            android:text="Купить"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_shapes"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="18dp"/>
        <TextView
            android:id="@+id/is_in_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_marginStart="18dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/btnBuy"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/in_stock"/>
        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat"
            app:layout_constraintBottom_toTopOf="@+id/is_in_stock"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>